[tool.poetry]
name = "dfl"
version = "0.1.0"
description = "Toolsets for transforming and searching the path of dfl(Directory, File, Link)"
authors = ["Doohoon Kim <me@doohoon.kim>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
